add unit test for UserService